# weaviate-sbert-vectorizer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
.github/workflows/: build_image.yaml  unit_test.yaml
tests/: test_vectorizer.py
wstv/: main.py  model.py
